# serializer version: 1
# name: test_full_user_flow_implementation
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
      'unique_id': 'CN11A1A00001',
    }),
    'data': dict({
      'host': '127.0.0.1',
      'mac': None,
      'port': 9123,
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'elgato',
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'host': '127.0.0.1',
        'mac': None,
        'port': 9123,
      }),
      'disabled_by': None,
      'domain': 'elgato',
      'entry_id': <ANY>,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': 'CN11A1A00001',
      'unique_id': 'CN11A1A00001',
      'version': 1,
    }),
    'title': 'CN11A1A00001',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_full_zeroconf_flow_implementation
  FlowResultSnapshot({
    'context': dict({
      'confirm_only': True,
      'source': 'zeroconf',
      'unique_id': 'CN11A1A00001',
    }),
    'data': dict({
      'host': '127.0.0.1',
      'mac': 'AA:BB:CC:DD:EE:FF',
      'port': 9123,
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'elgato',
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'host': '127.0.0.1',
        'mac': 'AA:BB:CC:DD:EE:FF',
        'port': 9123,
      }),
      'disabled_by': None,
      'domain': 'elgato',
      'entry_id': <ANY>,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'zeroconf',
      'title': 'CN11A1A00001',
      'unique_id': 'CN11A1A00001',
      'version': 1,
    }),
    'title': 'CN11A1A00001',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_zeroconf_during_onboarding
  FlowResultSnapshot({
    'context': dict({
      'source': 'zeroconf',
      'unique_id': 'CN11A1A00001',
    }),
    'data': dict({
      'host': '127.0.0.1',
      'mac': 'AA:BB:CC:DD:EE:FF',
      'port': 9123,
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'elgato',
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'host': '127.0.0.1',
        'mac': 'AA:BB:CC:DD:EE:FF',
        'port': 9123,
      }),
      'disabled_by': None,
      'domain': 'elgato',
      'entry_id': <ANY>,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'zeroconf',
      'title': 'CN11A1A00001',
      'unique_id': 'CN11A1A00001',
      'version': 1,
    }),
    'title': 'CN11A1A00001',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
